--- a/medical_visits_angular/src/app/registation-form/registation-form.component.css
+++ b/medical_visits_angular/src/app/registation-form/registation-form.component.css
@@ -24,7 +24,7 @@ input {
     padding: 5px;
     font-size: 16px;
     border-radius: 5px;
-    border: 1px solid gray;
+    border: 2px solid gray;
 }
 
 button {
@@ -42,3 +42,12 @@ button:hover {
     background-color: #0069d9;
 }
 
+input.ng-invalid.ng-touched{
+    border: 2px solid red;
+}
+
+.error-message {
+    margin-top: 5px;
+    color: red;
+    font-size: 12px;
+}
