--- a/medical_visits_angular/src/app/registation-form/registation-form.component.css
+++ b/medical_visits_angular/src/app/registation-form/registation-form.component.css
@@ -51,3 +51,17 @@ input.ng-invalid.ng-touched{
     color: red;
     font-size: 12px;
 }
+
+label,input {
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+label[for="pesel"],
+input#pesel {
+    display: block;
+}
+
+::-webkit-input-placeholder {
+    text-align: center;
+}
