--- a/medical_visits_angular/src/app/registation-form/registation-form.component.html
+++ b/medical_visits_angular/src/app/registation-form/registation-form.component.html
@@ -1,161 +1,159 @@
 <h1 id="head">MedicalVisits</h1>
 <form #form="ngForm" (ngSubmit)="onSubmit(form)">
-  <div ngModelGroup="patient" #patient="ngModelGroup">
-    <div>
-        <!-- Imię -->
-        <input name="firstName" id="firstName" #firstName="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="First Name">
-        <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="error-message">
-            <div *ngIf="firstName.errors?.['required']">Imię jest wymagane</div>
-            <div *ngIf="firstName.errors?.['pattern']">Imię musi się składać z samych liter</div>
+    <!-- Dane Pacjenta -->
+    <div ngModelGroup="patient" #patient="ngModelGroup">
+        <div>
+            <!-- Imię -->
+            <input name="firstName" id="firstName" #firstName="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="First Name">
+            <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="error-message">
+                <div *ngIf="firstName.errors?.['required']">Imię jest wymagane</div>
+                <div *ngIf="firstName.errors?.['pattern']">Imię musi się składać z samych liter</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Nazwisko -->
+            <input name="lastName" id="lastName" #lastName="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="Surname">
+            <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="error-message">
+                <div *ngIf="lastName.errors?.['required']">Nazwisko jest wymagane</div>
+                <div *ngIf="lastName.errors?.['pattern']">Nazwisko musi się składać z samych liter</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- PESEL -->
+            <input name="pesel" id="pesel" #pesel="ngModel" ngModel pattern="[0-9]{11}" required (ngModelChange)="calculateBirthdate(form)" placeholder="PESEL">
+            <div *ngIf="pesel.invalid && (pesel.dirty || pesel.touched)" class="error-message">
+                <div *ngIf="pesel.errors?.['required']">PESEL jest wymagany</div>
+                <div *ngIf="pesel.errors?.['pattern']">PESEL musi składać się z 11 cyfr</div>
+                <div *ngIf="pesel.errors?.['invalid']">Niepoprawny PESEL</div>
+                <div *ngIf="pesel.errors?.['underage']">Nie jesteś pełnoletni nie możesz się zarejestrować w MedicalVisits</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Data urodzenia -->
+            <input type="date" name="birthDate" id="birthDate" #birthDate="ngModel" ngModel placeholder="Date of birth" readonly>
+        </div>
+
+        <div>
+            <!-- Wiek -->
+            <input name="age" id="age" #age="ngModel" ngModel pattern="^[0-9]{1,}$" placeholder="Age" readonly>
+        </div>
+
+        <div>
+            <!-- Płeć -->
+            <span *ngFor="let gen of gender">
+                <input type="radio" name="gender" id="{{gen.id}}" value="{{gen.value}}" #gender="ngModel" ngModel [style.pointer-events]="'none'">
+                <label for="{{gen.id}}" [style.pointer-events]="'none'">{{gen.value}}</label>
+            </span>
+        </div>
+
+        <div>
+            <!-- Numer telefonu -->
+            <input name="phoneNr" id="phoneNr" #phoneNr="ngModel" ngModel pattern="[0-9]{9}" required placeholder="Phone number">
+            <div *ngIf="phoneNr.invalid && (phoneNr.dirty || phoneNr.touched)" class="error-message">
+                <div *ngIf="phoneNr.errors?.['required']">Numer telefonu jest wymagany</div>
+                <div *ngIf="phoneNr.errors?.['pattern']">Numer telefonu musi składać się z 9 cyfr</div>
+                <div *ngIf="phoneNr.errors?.['invalid']">Niepoprawny numer telefonu</div>
+            </div>
+        </div>
+    </div>
+    <!-- Adres Pacjenta -->
+    <div ngModelGroup="addressData" #addressData="ngModelGroup">
+        <div>
+            <!-- Kraj -->
+            <input name="country" id="country" #country="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="Country">
+            <div *ngIf="country.invalid && (country.dirty || country.touched)" class="error-message">
+                <div *ngIf="country.errors?.['required']">Kraj jest wymagany</div>
+                <div *ngIf="country.errors?.['pattern']">Nazwa kraju musi się składać z liter</div>
+                <div *ngIf="country.errors?.['invalid']">Niepoprawnie podana nazwa kraju</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Miasto -->
+            <input name="city" id="city" #city="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="City">
+            <div *ngIf="city.invalid && (city.dirty || city.touched)" class="error-message">
+                <div *ngIf="city.errors?.['required']">Miasto jest wymagane</div>
+                <div *ngIf="city.errors?.['pattern']">Nazwa miasta musi składać się z liter</div>
+                <div *ngIf="city.errors?.['invalid']">Niepoprawnie podana nazwa miasta</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Ulica -->
+            <input name="street" id="street" #street="ngModel" ngModel required placeholder="Street">
+            <div *ngIf="street.invalid && (street.dirty || street.touched)" class="error-message">
+                <div *ngIf="street.errors?.['required']">Nazwa ulicy jest wymagana</div>
+                <div *ngIf="street.errors?.['invalid']">Niepoprawnie podana ulica</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Numer domu -->
+            <input name="houseNr" id="houseNr" #houseNr="ngModel" ngModel required pattern="^\d+[A-Za-z]?$" placeholder="House number">
+
+            <div *ngIf="houseNr.invalid && (houseNr.dirty || houseNr.touched)" class="error-message">
+                <div *ngIf="houseNr.errors?.['required']">Numer domu jest wymagany</div>
+                <div *ngIf="houseNr.errors?.['pattern']">Numer domu musi składać się z maksymalne 3 cyfr, dodatkowo może zawierać maksymalnie 3 litery na końcu</div>
+                <div *ngIf="houseNr.errors?.['invalid']">Niepoprawny numer domu</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Numer mieszkania -->
+            <input name="apartmentNr" id="apartmentNr" #apartmentNr="ngModel" ngModel required pattern="^\d+[A-Za-z]?$" placeholder="Apartment number">
+            <div *ngIf="apartmentNr.invalid && (apartmentNr.dirty || apartmentNr.touched)" class="error-message">
+                <div *ngIf="apartmentNr.errors?.['required']">Numer mieszkania jest wymagany</div>
+                <div *ngIf="apartmentNr.errors?.['pattern']">Numer mieszkania musi składać się z maksymalne 3 cyfr, dodatkowo może zawierać maksymalnie 3 litery na końcu</div>
+                <div *ngIf="apartmentNr.errors?.['invalid']">Niepoprawny numer mieszkania</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Kod pocztowy -->
+            <input name="postalCode" id="postalCode" #postalCode="ngModel" ngModel required pattern="[0-9]{2}-[0-9]{3}" placeholder="Postal code">
+            <div *ngIf="postalCode.invalid && (postalCode.dirty || postalCode.touched)" class="error-message">
+                <div *ngIf="postalCode.errors?.['required']">Kod pocztowy jest wymagany</div>
+                <div *ngIf="postalCode.errors?.['pattern']">Kod pocztowy musi być zgodny ze wzorem np. 00-000</div>
+                <div *ngIf="postalCode.errors?.['invalid']">Niepoprawny kod pocztowy</div>
+            </div>
+        </div>
+    </div>
+    <!-- Dane logowania Pacjenta -->
+    <div ngModelGroup="loginData" #loginData="ngModelGroup">
+        <div>
+            <!-- E-mail -->
+            <input type="email" name="email" id="email" #email="ngModel" ngModel required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="E-mail address">
+            <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error-message">
+                <div *ngIf="email.errors?.['required']">Email jest wymagany</div>
+                <div *ngIf="email.errors?.['pattern']">Niepoprawnie podany email</div>
+                <div *ngIf="email.errors?.['invalid']">Niepoprawnie podany email</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Hasło -->
+            <input type="password" name="password" id="password" #passwordInput="ngModel" ngModel required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w\s]).*$" minlength="8" placeholder="Password">
+            <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" class="error-message">
+                <div *ngIf="passwordInput.errors?.['required']">Hasło jest wymagane</div>
+                <div *ngIf="passwordInput.errors?.['pattern']">Hasło musi zawierać conajmniej jedną dużą literę, cyfrę, znak specjalny</div>
+                <div *ngIf="passwordInput.errors?.['minlength']">Hasło musi mieć conajmniej 8 znaków</div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Powtórz hasło -->
+            <input type="password" name="confirmPassword" id="confirmPassword" #confirmPasswordInput="ngModel" ngModel (ngModelChange)="validatePasswords(form)" required placeholder="Confirm password">
+            <div *ngIf="confirmPasswordInput.invalid && (confirmPasswordInput.dirty || confirmPasswordInput.touched)"
+                class="error-message">
+                <div *ngIf="confirmPasswordInput.errors?.['required']">Powtórz hasło!</div>
+                <div *ngIf="confirmPasswordInput.errors?.['notMatch']">Hasła muszą się zgadzać!</div>
+            </div>
         </div>
     </div>
 
-    <div>
-        <!-- Nazwisko -->
-        <input name="lastName" id="lastName" #lastName="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="Surname">
-        <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="error-message">
-            <div *ngIf="lastName.errors?.['required']">Nazwisko jest wymagane</div>
-            <div *ngIf="lastName.errors?.['pattern']">Nazwisko musi się składać z samych liter</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- PESEL -->
-        <input name="pesel" id="pesel" #pesel="ngModel" ngModel pattern="[0-9]{11}" required (ngModelChange)="calculateBirthdate(form)" placeholder="PESEL">
-        <div *ngIf="pesel.invalid && (pesel.dirty || pesel.touched)" class="error-message">
-            <div *ngIf="pesel.errors?.['required']">PESEL jest wymagany</div>
-            <div *ngIf="pesel.errors?.['pattern']">PESEL musi składać się z 11 cyfr</div>
-            <div *ngIf="pesel.errors?.['invalid']">Niepoprawny PESEL</div>
-            <div *ngIf="pesel.errors?.['underage']">Nie jesteś pełnoletni nie możesz się zarejestrować w MedicalVisits</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Data urodzenia -->
-        <input type="date" name="birthDate" id="birthDate" #birthDate="ngModel" ngModel placeholder="Date of birth">
-    </div>
-
-    <div>
-        <!-- Wiek -->
-        <input name="age" id="age" #age="ngModel" ngModel pattern="^[0-9]{1,}$" placeholder="Age">
-    </div>
-
-    <div>
-        <!-- Płeć -->
-        <span *ngFor="let gen of gender">
-            <input type="radio" name="gender" id="{{gen.id}}" value="{{gen.value}}" #gender="ngModel" ngModel>
-            <label for="{{gen.id}}">{{gen.value}}</label>
-        </span>
-    </div>
-
-    <div>
-        <!-- Numer telefonu -->
-        <input name="phoneNr" id="phoneNr" #phoneNr="ngModel" ngModel pattern="[0-9]{9}" required placeholder="Phone number">
-        <div *ngIf="phoneNr.invalid && (phoneNr.dirty || phoneNr.touched)" class="error-message">
-            <div *ngIf="phoneNr.errors?.['required']">Numer telefonu jest wymagany</div>
-            <div *ngIf="phoneNr.errors?.['pattern']">Numer telefonu musi składać się z 9 cyfr</div>
-            <div *ngIf="phoneNr.errors?.['invalid']">Niepoprawny numer telefonu</div>
-        </div>
-    </div>
-
-  </div>
-
-  <div ngModelGroup="addressData" #addressData="ngModelGroup">
-
-    <div>
-        <!-- Kraj -->
-        <input name="country" id="country" #country="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="Country">
-        <div *ngIf="country.invalid && (country.dirty || country.touched)" class="error-message">
-            <div *ngIf="country.errors?.['required']">Kraj jest wymagany</div>
-            <div *ngIf="country.errors?.['pattern']">Nazwa kraju musi się składać z liter</div>
-            <div *ngIf="country.errors?.['invalid']">Niepoprawnie podana nazwa kraju</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Miasto -->
-        <input name="city" id="city" #city="ngModel" ngModel required pattern="[a-zA-Z]+" placeholder="City">
-        <div *ngIf="city.invalid && (city.dirty || city.touched)" class="error-message">
-            <div *ngIf="city.errors?.['required']">Miasto jest wymagane</div>
-            <div *ngIf="city.errors?.['pattern']">Nazwa miasta musi składać się z liter</div>
-            <div *ngIf="city.errors?.['invalid']">Niepoprawnie podana nazwa miasta</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Ulica -->
-        <input name="street" id="street" #street="ngModel" ngModel required placeholder="Street">
-        <div *ngIf="street.invalid && (street.dirty || street.touched)" class="error-message">
-            <div *ngIf="street.errors?.['required']">Nazwa ulicy jest wymagana</div>
-            <div *ngIf="street.errors?.['invalid']">Niepoprawnie podana ulica</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Numer domu -->
-        <input name="houseNr" id="houseNr" #houseNr="ngModel" ngModel required pattern="^\d+[A-Za-z]?$" placeholder="House number">
-
-        <div *ngIf="houseNr.invalid && (houseNr.dirty || houseNr.touched)" class="error-message">
-            <div *ngIf="houseNr.errors?.['required']">Numer domu jest wymagany</div>
-            <div *ngIf="houseNr.errors?.['pattern']">Numer domu musi składać się z maksymalne 3 cyfr, dodatkowo może zawierać maksymalnie 3 litery na końcu</div>
-            <div *ngIf="houseNr.errors?.['invalid']">Niepoprawny numer domu</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Numer mieszkania -->
-        <input name="apartmentNr" id="apartmentNr" #apartmentNr="ngModel" ngModel required pattern="^\d+[A-Za-z]?$" placeholder="Apartment number">
-        <div *ngIf="apartmentNr.invalid && (apartmentNr.dirty || apartmentNr.touched)" class="error-message">
-            <div *ngIf="apartmentNr.errors?.['required']">Numer mieszkania jest wymagany</div>
-            <div *ngIf="apartmentNr.errors?.['pattern']">Numer mieszkania musi składać się z maksymalne 3 cyfr, dodatkowo może zawierać maksymalnie 3 litery na końcu</div>
-            <div *ngIf="apartmentNr.errors?.['invalid']">Niepoprawny numer mieszkania</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Kod pocztowy -->
-        <input name="postalCode" id="postalCode" #postalCode="ngModel" ngModel required pattern="[0-9]{2}-[0-9]{3}" placeholder="Postal code">
-        <div *ngIf="postalCode.invalid && (postalCode.dirty || postalCode.touched)" class="error-message">
-            <div *ngIf="postalCode.errors?.['required']">Kod pocztowy jest wymagany</div>
-            <div *ngIf="postalCode.errors?.['pattern']">Kod pocztowy musi być zgodny ze wzorem np. 00-000</div>
-            <div *ngIf="postalCode.errors?.['invalid']">Niepoprawny kod pocztowy</div>
-        </div>
-    </div>
-
-  </div>
-
-
-  <div ngModelGroup="loginData" #loginData="ngModelGroup">
-    <div>
-        <!-- E-mail -->
-        <input type="email" name="email" id="email" #email="ngModel" ngModel required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="E-mail address">
-        <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error-message">
-            <div *ngIf="email.errors?.['required']">Email jest wymagany</div>
-            <div *ngIf="email.errors?.['pattern']">Niepoprawnie podany email</div>
-            <div *ngIf="email.errors?.['invalid']">Niepoprawnie podany email</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Hasło -->
-        <input type="password" name="password" id="password" #passwordInput="ngModel" ngModel required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w\s]).*$" minlength="8" placeholder="Password">
-        <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" class="error-message">
-            <div *ngIf="passwordInput.errors?.['required']">Hasło jest wymagane</div>
-            <div *ngIf="passwordInput.errors?.['pattern']">Hasło musi zawierać conajmniej jedną dużą literę, cyfrę, znak specjalny</div>
-            <div *ngIf="passwordInput.errors?.['minlength']">Hasło musi mieć conajmniej 8 znaków</div>
-        </div>
-    </div>
-
-    <div>
-        <!-- Powtórz hasło -->
-        <input type="password" name="confirmPassword" id="confirmPassword" #confirmPasswordInput="ngModel" ngModel (ngModelChange)="validatePasswords(form)" required placeholder="Confirm password">
-        <div *ngIf="confirmPasswordInput.invalid && (confirmPasswordInput.dirty || confirmPasswordInput.touched)"
-            class="error-message">
-            <div *ngIf="confirmPasswordInput.errors?.['required']">Powtórz hasło!</div>
-            <div *ngIf="confirmPasswordInput.errors?.['notMatch']">Hasła muszą się zgadzać!</div>
-        </div>
-    </div>
-  </div>
     <button type="submit" [disabled]="!form.valid">SIGN UP</button>
     <div *ngIf="form.invalid && form.touched" class="error-message">Wypełnij cały formularz!</div>
 </form>
